--- a/app/views/network_projects/new.html.erb
+++ b/app/views/network_projects/new.html.erb
@@ -2,23 +2,25 @@
 
 <div class="project_add c-section">
 
-  <!-- title -->
-  <div id="title"></div>
+  <!-- c-section-intro -->
+  <div class="c-section-intro">
+      <div id="title"></div>
+  </div>
 
-  <div class="c-section">
+  <!-- c-section-container -->
+  <div class="c-section-container">
 
     <!-- description -->
     <div id="description"></div>
 
-    <div class="pickdate row">
-      <!-- start pickdate -->
+    <!-- pickadate x2 -->
+    <div class="pickadate row">
       <div class="c-pickadate column small-12 medium-6">
         <h3 class="c-title">Start date</h3>
         <div class="start-date"></div>
         <div id="pickadate-start" class="pickadate-container" autofocus></div>
       </div>
 
-      <!-- end pickdate -->
       <div class="c-pickadate column small-12 medium-6">
         <h3 class="c-title">End date</h3>
         <div class="end-date"></div>
@@ -28,13 +30,13 @@
       <p class="c-required -hidden">* Both dates are required</p>
     </div>
 
+    <!-- project-info -->
     <div class="project-info">
       <h3 class="c-title">Project information</h3>
       <div id="project-website" class="form-field"></div>
-
-      <!--<div id="project-types" class="form-field"></div>
+      <div id="project-types" class="form-field"></div>
       <div id="cancer-types" class="form-field"></div>
-      <div id="funding-sources" class="form-field"></div>-->
+      <div id="funding-sources" class="form-field"></div>
     </div>
 
     <!--<div class="investigators-organizations">
@@ -49,4 +51,6 @@
       <table class="investigators-added"></table>
     </div>-->
   </div>
+
 </div>
+<!-- endc-section -->
