adds new dropdown to the sortby toolbar item

--- a/app/assets/javascripts/templates/dropdown.hbs
+++ b/app/assets/javascripts/templates/dropdown.hbs
@@ -1,14 +1,15 @@
-<div class="c-dropdown -sortby">
-  <div class="dropdown-value">current value</div>
-  <div class="dropdown-content">
-    <div class="dropdown-item">
-      <a>Hello</a>
-    </div>
-    <div class="dropdown-item">
-      <a>Hello</a>
-    </div>
-    <div class="dropdown-item">
-      <a>Hello</a>
-    </div>
+<div class="c-dropdown {{class}}">
+  {{#if showHeader}}
+    {{#if label}}
+      {{label}}
+    {{/if}}
+    <div class="dropdown-value js-open">{{header}}</div>
+  {{/if}}
+  <div class="dropdown-content {{#if open}} -open {{/if}}">
+    {{#each options}}
+      <div class="dropdown-item">
+        <a class="js-option" data-value="{{value}}" name="{{name}}">{{name}}</a>
+      </div>
+      {{/each}}
   </div>
 </div>
