--- a/app/assets/javascripts/templates/toolbar.hbs
+++ b/app/assets/javascripts/templates/toolbar.hbs
@@ -1,8 +1,5 @@
 <ul class="c-toolbar">
-  <li class="toolbar-item -sortby">
-    Sort by
-    <div class="toolbar-dropdown" id="sortby"></div>
-  </li>
+  <li id="sortby"class="toolbar-item -sortby"></li>
 
   <li class="toolbar-item -highlighted">
     <button class="c-btn js-toolbar-action" data-action="filter">
