filter form and new counters for map

--- a/app/views/map/_counters.html.erb
+++ b/app/views/map/_counters.html.erb
@@ -3,7 +3,7 @@
     <% if @current_type == 'projects' %>
       <div class="column small-3">
         <h3>Ongoing projects</h3>
-        <span class="amount"><%= @items_total %></span>
+        <span class="amount">-</span>
       </div>
       <div class="column small-3">
         <h3>
