add new component actionbar + new action-item layers

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -8,13 +8,14 @@
           <div class="c-breadcrumbs" id="breadcrumbs"></div>
         </div>
         <div class="column small-6">
+          <div id="actionbar"></div>
         </div>
       </div>
     </div>
   </div>
 
   <div id="map" class="c-map"></div>
-
+  <div id="layer"></div>
   <div class="l-app-navbar">
     <div class="wrapper">
       <div class="row collapse">
