--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -15,7 +15,7 @@
   </div>
 
   <div id="map" class="c-map"></div>
-  <div id="layer"></div>
+    <div id="layers"></div>
   <div class="l-app-navbar">
     <div class="wrapper">
       <div class="row collapse">
