added investigations count

--- a/app/views/map/_counters.html.erb
+++ b/app/views/map/_counters.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <% if @current_type == 'projects' %>
       <div class="column small-3">
-        <h3>Ongoing projects</h3>
-        <span class="amount">-</span>
+        <h3>Investigations</h3>
+        <span class="amount"><%= @investigations %></span>
       </div>
       <div class="column small-3">
         <h3>
