--- a/app/assets/stylesheets/components/_pickadate-override.scss
+++ b/app/assets/stylesheets/components/_pickadate-override.scss
@@ -46,15 +46,24 @@
 
           .picker__nav--prev,
           .picker__nav--next {
-            top: 6px;
+            top: 14px;
+            padding: 0;
+
+            &:hover {
+              background-color: transparent;
+
+              &:before {
+                opacity: .7;
+              }
+            }
           }
 
           .picker__nav--next {
-            right: 0;
+            right: 15px;
           }
 
           .picker__nav--prev {
-            left: 0;
+            left: 15px;
           }
 
           .picker__nav--prev:before,
@@ -92,6 +101,10 @@
 				cursor: pointer;
 				font-family: inherit;
 				font-weight: bold;
+
+        &:hover {
+          opacity: .7;
+        }
 			}
 		}
 	}
