--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -6,7 +6,7 @@ input[type="password"],
 input[type="email"],
 select {
   min-height: $input-height;
-  width: 100%;
+  min-width: 300px;
 }
 
 input[type="text"],
