--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -52,15 +52,14 @@
     </div>
   </div>
 
-  <div class="form-actions modal-buttons">
+  <div class="form-actions">
     <div class="row">
       <div class="column small-12">
         <div class="c-button-container -j-center -a-center">
-          <button type="button" class="c-btn -primary js-filter-form-cancel">Cancel</button>
-          <button type="submit" class="c-btn -primary js-filter-form-submit">Apply</button>
+          <button type="button" class="c-btn js-filter-form-cancel">Cancel</button>
+          <button type="submit" class="c-btn js-filter-form-submit">Apply</button>
         </div>
       </div>
     </div>
   </div>
-
 </form>
