--- a/app/assets/stylesheets/layouts/_sidebar.scss
+++ b/app/assets/stylesheets/layouts/_sidebar.scss
@@ -1,8 +1,8 @@
 .l-sidebar {
   border-left: 1px solid $border-color-1;
+  padding: $box-space;
 
   .sidebar-item {
-    padding: $box-space;
-    border-top: 1px solid $border-color-1;
+    margin-bottom: $box-space;
   }
 }
