--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -86,6 +86,7 @@
         color: $base-font-color;
         border: 0;
         font-size: $small-font-size;
+        line-height: 0.8;
       }
     }
   }
