Filter close styles

--- a/app/assets/stylesheets/components/_icons.scss
+++ b/app/assets/stylesheets/components/_icons.scss
@@ -23,6 +23,8 @@
   &.-blue { fill: $dark-sky-blue; }
 
   &:hover {
+    opacity: .5;
+
     &.-hv-opac { opacity: .5; }
     &.-hv-blue { fill: $dark-sky-blue; }
     &.-hv-black { fill: $black; }
