--- a/app/assets/javascripts/templates/modal.hbs
+++ b/app/assets/javascripts/templates/modal.hbs
@@ -1,6 +1,6 @@
 <div class="modal-container">
   <button class="modal-close js-btn-modal-close">
-    <svg class="c-icon -normal"><use xlink:href="#icon-close"></use></svg>
+    <svg class="c-icon -small -blue"><use xlink:href="#icon-close"></use></svg>
   </button>
 
   <div id="modal-loader" class="c-spinner">
