updates styles for layers-selector

--- a/app/assets/javascripts/templates/layers.hbs
+++ b/app/assets/javascripts/templates/layers.hbs
@@ -1,3 +1,13 @@
 <div class="c-layers">
-
+  <div class="layers-item">
+    <div class="switch round">
+      <input type="checkbox">
+    </div>
+    human development index
+    <button class="c-btn -round-icon -primary">
+      <svg class="c-icon">
+        <use xlink:href="#icon-info"></use>
+      </svg>
+    </button>
+  </div>
 </div>
