--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -41,6 +41,8 @@ $overlay-bg-color: rgba($black, .3);
 
 $border-color-1: #e5e5e5;
 
+$box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+
 $base-space: 23px;
 $box-space: 60px;
 $inline-space: 18px;
