--- a/app/assets/stylesheets/components/_toolbar.scss
+++ b/app/assets/stylesheets/components/_toolbar.scss
@@ -10,6 +10,8 @@
 
     .c-icon, svg {
       fill: $inverse-font-color;
+      vertical-align: -2px;
+      margin-right: 5px;
     }
 
     &.-highlighted {
