--- a/app/assets/stylesheets/components/_actionbar.scss
+++ b/app/assets/stylesheets/components/_actionbar.scss
@@ -11,6 +11,8 @@
   .actionbar-item {
     .c-btn > .c-icon {
       fill: $body-bg-color;
+      vertical-align: -2px;
+      margin-right: 5px;
     }
   }
 }
