--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -26,6 +26,15 @@
     padding: ($button-y-padding / 2) ($button-x-padding / 2);
   }
 
+  &.-round-icon {
+    width: 18px;
+    height: 18px;
+    border-radius: 100%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+  }
+
   &.-primary {
     color: $inverse-font-color;
     background-color: $primary-color;
