--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -14,8 +14,10 @@
     </div>
   </div>
 
-  <div id="map" class="c-map"></div>
+  <div id="map" class="c-map">
     <div id="layers"></div>
+  </div>
+
   <div class="l-app-navbar">
     <div class="wrapper">
       <div class="row collapse">
