changes c-icon styles

--- a/app/assets/javascripts/templates/layers.hbs
+++ b/app/assets/javascripts/templates/layers.hbs
@@ -1,13 +1,45 @@
 <div class="c-layers">
   <div class="layers-item">
-    <div class="switch round">
-      <input type="checkbox">
+    <div class="layer">
+      <div class="switch round">
+        <input type="radio">
+      </div>
+      human development index
+      <button class="c-btn -round-icon -primary">
+        <svg class="c-icon -small -inverse">
+          <use xlink:href="#icon-info"></use>
+        </svg>
+      </button>
     </div>
-    human development index
-    <button class="c-btn -round-icon -primary">
-      <svg class="c-icon">
-        <use xlink:href="#icon-info"></use>
-      </svg>
-    </button>
+  </div>
+
+  <div class="layers-item">
+    <div class="layer">
+      <button class="c-btn -thin">
+        <svg class="c-icon -small -primary">
+          <use xlink:href="#icon-arrow"></use>
+        </svg>
+      </button>
+      disability-adjusted life year
+      <button class="c-btn -round-icon -primary">
+        <svg class="c-icon -small -inverse">
+          <use xlink:href="#icon-info"></use>
+        </svg>
+      </button>
+    </div>
+    <ul>
+      <li class="layer">
+        <div class="switch round">
+          <input type="radio">
+        </div>
+        bladder cancer
+      </li>
+      <li class="layer">
+        <div class="switch round">
+          <input type="radio">
+        </div>
+        malignant neoplasms
+      </li>
+    </ul>
   </div>
 </div>
