changes svg styles of actionbar & toolbar

--- a/app/assets/javascripts/templates/toolbar.hbs
+++ b/app/assets/javascripts/templates/toolbar.hbs
@@ -3,7 +3,7 @@
 
   <li class="toolbar-item -highlighted">
     <button class="c-btn js-toolbar-action" data-action="filter">
-      <svg class="c-icon -small">
+      <svg class="c-icon -small -inverse">
         <use xlink:href="#icon-filter"></use>
       </svg>
       Filter
