--- a/app/assets/javascripts/templates/actionbar.hbs
+++ b/app/assets/javascripts/templates/actionbar.hbs
@@ -2,7 +2,7 @@
 
   <li class="actionbar-item">
     <button class="c-btn -thin js-actionbar-action" data-action="layers">
-      <svg class="c-icon -small">
+      <svg class="c-icon -small -inverse">
         <use xlink:href="#icon-layers"></use>
       </svg>
       Layers
