switch styles fix

--- a/app/assets/javascripts/templates/layers.hbs
+++ b/app/assets/javascripts/templates/layers.hbs
@@ -2,7 +2,8 @@
   <div class="layers-item">
     <div class="layer">
       <div class="switch round">
-        <input type="radio">
+        <input type="radio" id="layer1" name="layer">
+        <label for="layer1"></label>
       </div>
       human development index
       <button class="c-btn -round-icon -primary">
@@ -30,13 +31,15 @@
     <ul>
       <li class="layer">
         <div class="switch round">
-          <input type="radio">
+          <input type="radio" id="layer2" name="layer">
+          <label for="layer2"></label>
         </div>
         bladder cancer
       </li>
       <li class="layer">
         <div class="switch round">
-          <input type="radio">
+          <input type="radio" id="layer3" name="layer">
+          <label for="layer3"></label>
         </div>
         malignant neoplasms
       </li>
