--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -33,7 +33,8 @@
     padding: 0;
     display: flex;
     align-items: center;
-    
+    margin: ($button-y-padding / 2) ($button-x-padding / 2);
+
   }
 
   &.-primary {
