layer list`s collapse styles included

--- a/app/assets/javascripts/templates/layers.hbs
+++ b/app/assets/javascripts/templates/layers.hbs
@@ -17,7 +17,7 @@
   <div class="layers-item">
     <div class="layer">
       <button class="c-btn -thin">
-        <svg class="c-icon -small -primary">
+        <svg class="c-icon -small -primary layer-arrow">
           <use xlink:href="#icon-arrow"></use>
         </svg>
       </button>
@@ -28,7 +28,7 @@
         </svg>
       </button>
     </div>
-    <ul>
+    <ul class="layer-list">
       <li class="layer">
         <div class="switch round">
           <input type="radio" id="layer2" name="layer">
