Add carto layer

--- a/app/assets/javascripts/templates/layers.hbs
+++ b/app/assets/javascripts/templates/layers.hbs
@@ -2,7 +2,7 @@
   <div class="layers-item">
     <div class="layer">
       <div class="switch round">
-        <input type="radio">
+        <input type="radio" name="layer" value="hdi">
       </div>
       human development index
       <button class="c-btn -round-icon -primary">
@@ -30,13 +30,13 @@
     <ul>
       <li class="layer">
         <div class="switch round">
-          <input type="radio">
+          <input type="radio" name="layer" value="bladder">
         </div>
         bladder cancer
       </li>
       <li class="layer">
         <div class="switch round">
-          <input type="radio">
+          <input type="radio" name="layer" value="mal">
         </div>
         malignant neoplasms
       </li>
