--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -15,6 +15,8 @@
 
   <div id="map" class="c-map"></div>
 
+  <div id="legend" class="c-legend -main"></div>
+
   <div class="l-app-navbar">
     <div class="wrapper">
       <div class="row collapse">
