--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -96,6 +96,11 @@
     background: #b85fff;
     border-radius: 100%;
     box-shadow: 0 3px 5px 0 rgba(3, 11, 43, 0.2);
+
+    &.-events {
+      background-color: #f57823;
+      border: 1px solid #e66d1b;
+    }
   }
 
   .marker-icon {
@@ -106,6 +111,11 @@
       stroke: #005e9c;
       stroke-width: 1px;
       filter: drop-shadow(0 3px 5px rgba(3, 11, 43, 0.2));
+    }
+
+    &.-events .icon {
+      fill: #f57823;
+      stroke: #e66d1b;
     }
   }
 
