new branch, almost stable, doing css

--- a/app/views/network_projects/new.html.erb
+++ b/app/views/network_projects/new.html.erb
@@ -1,3 +1,3 @@
 <script> var AUTH_TOKEN = "<%= @user.authentication_token %>"</script>
 
-<div id="project_form"></div>
+<div id="project_form" class="c-project-form"></div>
