--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,6 +4,7 @@ input[type="text"],
 input[type="number"],
 input[type="password"],
 input[type="email"],
+input[type="website"],
 select {
   min-height: $input-height;
   min-width: 300px;
